Update Rabbit MQ